--- a/app/src/main/res/layout/achievement_tab.xml
+++ b/app/src/main/res/layout/achievement_tab.xml
@@ -38,8 +38,8 @@
                     android:tint="@color/circleIndicatorGrey"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="30dp"
-                    android:layout_marginRight="@dimen/content_inset_half"
-                    android:layout_marginEnd="@dimen/content_inset_half"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:contentDescription="@string/achievement_next_arrow" />
