--- a/app/src/main/res/layout/intro_user_details_tab.xml
+++ b/app/src/main/res/layout/intro_user_details_tab.xml
@@ -144,6 +144,32 @@
 
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/content_inset">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="@string/userType"
+                    android:textColor="#777777"
+                    android:textSize="@dimen/text_label_size" />
+
+                <Spinner
+                    android:id="@+id/userType_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="@dimen/content_inset_negative"
+                    android:layout_marginEnd="@dimen/content_inset_negative"
+                    tools:layout_width="200dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true" />
+
+            </RelativeLayout>
+
         </LinearLayout>
 
         <TextSwitcher
