--- a/app/src/main/res/layout/privacy_activity.xml
+++ b/app/src/main/res/layout/privacy_activity.xml
@@ -40,7 +40,8 @@
                 android:textColor="@color/colorPrimary"
                 android:layout_below="@+id/intro_privacy_message"
                 android:text="Aksepter"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="16dp"
+                android:onClick="accept"/>
 
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
